Fixed navigation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,7 @@ body {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 100%;
+  left: 200%;
   z-index: 1000;
   opacity: 0;
   width: 0;
