--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -56,7 +56,7 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 100%;
+    left: 200%;
     z-index: 1000;
 
     opacity: 0;
